--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,10 @@
 better-than-nothing
 
 # Folders
-build/
-cmake-build-debug/
-cmake-build-release/
+.build/
 .idea/
 .cache/
+.vscode/
 
 # Imgui cache
 imgui.ini
