feat: cleaned imports

--- a/Sources/Core/CMakeLists.txt
+++ b/Sources/Core/CMakeLists.txt
@@ -18,6 +18,8 @@ file(GLOB SOURCES
 	"src/Utils/*.hpp"
 	"src/Events/*.hpp"
 	"src/Events/*.cpp"
+	"src/Containers/*.hpp"
+	"src/Containers/*.cpp"
 )
 
 include_directories(src)
