updated vulkan and added vk-boostrap

--- a/Sources/Core/CMakeLists.txt
+++ b/Sources/Core/CMakeLists.txt
@@ -31,10 +31,23 @@ target_precompile_headers(${PROJECT_NAME} PRIVATE ../pch.hpp)
 target_compile_definitions(Core PRIVATE ENABLE_IMGUI=1)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glfw glm vulkan stb imgui inih glslang SPIRV glslang-default-resource-limits spirv_cross GPUOpen::VulkanMemoryAllocator)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+		glfw
+		glm
+		vulkan
+		stb
+		imgui
+		inih
+		glslang
+		SPIRV
+		glslang-default-resource-limits
+		spirv_cross
+		GPUOpen::VulkanMemoryAllocator
+		vk-bootstrap::vk-bootstrap
+)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glfw/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vulkan)
+target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vulkan/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glm/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/stb/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/tinyobjloader)
@@ -45,6 +58,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glsl
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glslang/Public)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/spirv_cross/spirv_cross)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vma/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vk-bootstrap/src)
 
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 
