--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory("ThirdParty/inih")
 add_subdirectory("ThirdParty/glslang")
 add_subdirectory("ThirdParty/spirv_cross")
 add_subdirectory("ThirdParty/vma")
+add_subdirectory("ThirdParty/vk-bootstrap")
 
 # ==================================================================================================
 # Sources
