--- a/Sources/Runtime/CMakeLists.txt
+++ b/Sources/Runtime/CMakeLists.txt
@@ -21,10 +21,24 @@ target_precompile_headers(${PROJECT_NAME} PRIVATE ../pch.hpp)
 
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Core glfw glm vulkan stb imgui inih glslang SPIRV glslang-default-resource-limits spirv_cross GPUOpen::VulkanMemoryAllocator)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+		Core
+		glfw
+		glm::glm
+		vulkan
+		stb
+		imgui
+		inih
+		glslang
+		glslang-default-resource-limits
+		SPIRV
+		spirv_cross
+		GPUOpen::VulkanMemoryAllocator
+		vk-bootstrap::vk-bootstrap
+)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glfw/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vulkan)
+target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vulkan/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glm/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/stb/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/tinyobjloader)
@@ -35,6 +49,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glsl
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glslang/Public)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/spirv_cross/spirv_cross)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vma/include)
+target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vk-bootstrap/src)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ../Core/src)
 
