--- a/Sources/Core/CMakeLists.txt
+++ b/Sources/Core/CMakeLists.txt
@@ -20,8 +20,8 @@ file(GLOB SOURCES
 	"src/Events/*.cpp"
 	"src/Containers/*.hpp"
 	"src/Containers/*.cpp"
-	"src/RAII/Glfw/*.hpp"
-	"src/RAII/Glfw/*.cpp"
+	"src/RAII/*.hpp"
+	"src/RAII/*.cpp"
 	"src/RAII/Vulkan/*.hpp"
 	"src/RAII/Vulkan/*.cpp"
 )
