rolled back vulkan version and add vulkan device

--- a/Sources/Core/CMakeLists.txt
+++ b/Sources/Core/CMakeLists.txt
@@ -39,27 +39,27 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 		glfw
 		glm::glm
 		vulkan
-		stb
-		imgui
-		inih
-		glslang
-		glslang-default-resource-limits
-		SPIRV
-		spirv_cross
+		# stb
+		# imgui
+		# inih
+		# glslang
+		# glslang-default-resource-limits
+		# SPIRV
+		# spirv_cross
 		GPUOpen::VulkanMemoryAllocator
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glfw/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vulkan/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glm/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/stb/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/tinyobjloader)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/entt/single_include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/imgui/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/inih/include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glslang/Include)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glslang/Public)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/spirv_cross/spirv_cross)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/stb/include)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/tinyobjloader)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/entt/single_include)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/imgui/include)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/inih/include)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glslang/Include)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/glslang/glslang/Public)
+# target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/spirv_cross/spirv_cross)
 target_include_directories(${PROJECT_NAME} PRIVATE ../../ThirdParty/vma/include)
 
 target_include_directories(${PROJECT_NAME} PRIVATE src)
